--- a/index.html
+++ b/index.html
@@ -60,30 +60,30 @@
 
         const EXECUTIVE_COMMITTEE = [
             { 
-                name: "Priya Sharma", 
+                name: "Monisha Talukder", 
                 role: "President", 
                 bio: "Leading strategic initiatives and industry partnerships.",
                 image: "images/president.jpg"
             },
             { 
-                name: "Rahul Verma", 
-                role: "Technical Head", 
-                bio: "Managing computational workshops and technical infrastructure.",
+                name: "Futanta Chakma", 
+                role: "General Secretary", 
+                bio: "Coordinating club operations and university liaisons.",
                 image: "images/tech-head.jpg"
             },
             { 
-                name: "Ananya Das", 
-                role: "General Secretary", 
-                bio: "Coordinating club operations and university liaisons.",
+                name: "Dipta Roy", 
+                role: "Treasurer", 
+                bio: "Managing computational workshops and technical infrastructure.",
                 image: "images/secretary.jpg"
             }
         ];
 
         const ADVISORY_COMMITTEE = [
             { 
-                name: "Dr. Arun Kumar", 
-                role: "Faculty Advisor", 
-                bio: "Professor of Mathematical Statistics with 20+ years experience.",
+                name: "Professor Dr. Abu Sayeed Md. Ripon Rouf", 
+                role: "Advisor & Chairman", 
+                bio: "",
                 image: "images/advisor.jpg" 
             }
         ];
@@ -385,7 +385,7 @@
                                 </div>
                                 <div className="flex flex-col text-left">
                                     <span className={`text-xl font-black leading-none tracking-tighter ${!scrolled && activeTab === 'home' ? 'text-white' : 'text-slate-900'}`}>
-                                        STATCLUB <span className="text-blue-500">JnU</span>
+                                        Statistics Club, JnU <span className="text-blue-500">JnU</span>
                                     </span>
                                     <span className={`text-[9px] font-bold uppercase tracking-[0.3em] mt-1 ${!scrolled && activeTab === 'home' ? 'text-white/60' : 'text-slate-400'}`}>
                                         Dhaka, Bangladesh
@@ -516,3 +516,4 @@
     </script>
 </body>
 </html>
+
