--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                             <div onClick={() => navigateTo('home')} className="flex items-center gap-4 cursor-pointer group">
                                 <div className="relative w-12 h-12 flex items-center justify-center">
                                     <img 
-                                        src="images/logo.png" 
+                                        src="images/Club_Logo.png" 
                                         alt="JnU Stat Club Logo"
                                         onError={(e) => { e.target.style.display = 'none'; }}
                                         className="w-full h-full object-contain relative z-10"
@@ -385,7 +385,7 @@
                                 </div>
                                 <div className="flex flex-col text-left">
                                     <span className={`text-xl font-black leading-none tracking-tighter ${!scrolled && activeTab === 'home' ? 'text-white' : 'text-slate-900'}`}>
-                                        Statistics Club, JnU <span className="text-blue-500">JnU</span>
+                                        Statistics Club <span className="text-blue-500">JnU</span>
                                     </span>
                                     <span className={`text-[9px] font-bold uppercase tracking-[0.3em] mt-1 ${!scrolled && activeTab === 'home' ? 'text-white/60' : 'text-slate-400'}`}>
                                         Dhaka, Bangladesh
@@ -516,4 +516,5 @@
     </script>
 </body>
 </html>
+
 
