--- a/verification.html
+++ b/verification.html
@@ -112,14 +112,14 @@
                             <div className="bg-slate-50 p-6 rounded-2xl border border-slate-100 mb-8 overflow-hidden">
                                 <p className="text-[10px] font-black text-slate-400 uppercase tracking-[0.2em] mb-3">Public Registry</p>
                                 <code className="text-blue-600 font-mono text-sm block truncate">
-                                    statclubjnu.github.io/certificate-verification
+                                    statclubjnu.github.io/verification
                                 </code>
                             </div>
 
                             <div className="pt-8 border-t border-slate-100">
                                 <p className="text-slate-400 text-xs font-bold mb-3 uppercase tracking-widest text-center">Manual Inquiries</p>
                                 <a href="mailto:statisticsclubjnu@stat.jnu.ac.bd" className="text-slate-900 font-black hover:text-blue-600 text-lg block transition-colors">
-                                    statisticsclubjnu@stat.jnu.ac.bd
+                                    statisticsclub@stat.jnu.ac.bd
                                 </a>
                             </div>
                         </div>
@@ -141,4 +141,5 @@
         root.render(<App />);
     </script>
 </body>
+
 </html>
