--- a/index.html
+++ b/index.html
@@ -326,8 +326,8 @@
                                     </div>
                                     <div className="pt-8 border-t border-slate-100">
                                         <p className="text-slate-400 text-xs font-bold mb-3 uppercase tracking-widest">Manual Inquiries</p>
-                                        <a href="mailto:statisticsclubjnu@stat.jnu.ac.bd" className="text-slate-900 font-black hover:text-blue-600 text-lg">
-                                            statisticsclubjnu@stat.jnu.ac.bd
+                                        <a href="mailto:statisticsclub@stat.jnu.ac.bd" className="text-slate-900 font-black hover:text-blue-600 text-lg">
+                                            statisticsclub@stat.jnu.ac.bd
                                         </a>
                                     </div>
                                 </div>
@@ -500,7 +500,7 @@
                                 <h4 className="text-white font-black mb-8 uppercase tracking-widest text-xs">Visit Us</h4>
                                 <p className="text-sm font-bold mb-2 text-slate-300">Department of Statistics</p>
                                 <p className="text-sm leading-relaxed mb-6">Jagannath University<br/>Dhaka-1100, Bangladesh</p>
-                                <p className="text-sm font-black text-blue-500">statisticsclubjnu@stat.jnu.ac.bd</p>
+                                <p className="text-sm font-black text-blue-500">statisticsclub@stat.jnu.ac.bd</p>
                             </div>
                         </div>
                         <div className="max-w-7xl mx-auto px-6 mt-20 pt-10 border-t border-slate-800 text-center text-[10px] font-black uppercase tracking-[0.4em]">
@@ -516,5 +516,6 @@
     </script>
 </body>
 </html>
+
 
 
