--- a/verification.html
+++ b/verification.html
@@ -118,7 +118,7 @@
 
                             <div className="pt-8 border-t border-slate-100">
                                 <p className="text-slate-400 text-xs font-bold mb-3 uppercase tracking-widest text-center">Manual Inquiries</p>
-                                <a href="mailto:statisticsclubjnu@stat.jnu.ac.bd" className="text-slate-900 font-black hover:text-blue-600 text-lg block transition-colors">
+                                <a href="mailto:statisticsclub@stat.jnu.ac.bd" className="text-slate-900 font-black hover:text-blue-600 text-lg block transition-colors">
                                     statisticsclub@stat.jnu.ac.bd
                                 </a>
                             </div>
@@ -143,3 +143,4 @@
 </body>
 
 </html>
+
