Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@
                             <div className="max-w-7xl mx-auto px-4 grid grid-cols-2 md:grid-cols-4 gap-8">
                                 {[
                                     { label: "Members", value: "300+", icon: "users" },
-                                    { label: "Workshops", value: "45+", icon: "brain" },
-                                    { label: "Awards", value: "12+", icon: "trophy" },
-                                    { label: "Projects", value: "20+", icon: "code" },
+                                    { label: "Workshops", value: "10+", icon: "brain" },
+                                    { label: "Competetion", value: "5+", icon: "trophy" },
+                                    { label: "Projects", value: "5+", icon: "code" },
                                 ].map((stat, i) => (
                                     <div key={i} className="p-8 rounded-[2rem] bg-slate-50 border border-slate-100 text-center">
                                         <div className="flex justify-center mb-4 text-blue-600"><Icon name={stat.icon} className="w-8 h-8" /></div>
@@ -231,7 +231,7 @@
                             <div className="md:col-span-2 text-left">
                                 <div className="flex items-center gap-4 mb-8 text-white">
                                     <div className="w-10 h-10 bg-blue-600 rounded-xl flex items-center justify-center"><Icon name="bar-chart" /></div>
-                                    <span className="text-2xl font-black uppercase tracking-tighter">Statistics Club JnU</span>
+                                    <span className="text-2xl font-black tracking-tighter">Statistics Club JnU</span>
                                 </div>
                                 <p className="text-lg leading-relaxed mb-8 max-w-md font-light">
                                     Official club of the Department of Statistics, Jagannath University, Dhaka. Fostering excellence in data science and research.
@@ -273,3 +273,4 @@
     </script>
 </body>
 </html>
+
