--- a/about.html
+++ b/about.html
@@ -58,12 +58,18 @@
             return (
                 <div className="min-h-screen selection:bg-blue-600 selection:text-white">
                     {/* Navigation Bar */}
-                    <nav className={`fixed w-full z-50 transition-all duration-500 bg-white/95 backdrop-blur-xl shadow-lg py-3`}>
+                    <nav className={`fixed w-full z-50 transition-all duration-500 ${scrolled ? 'bg-white/95 backdrop-blur-xl shadow-lg py-3' : 'bg-transparent py-8'}`}>
                         <div className="max-w-7xl mx-auto px-6 flex justify-between items-center">
-                            <div onClick={() => window.location.href='index.html'} className="flex items-center gap-4 cursor-pointer group">
+                            <div onClick={() => navigateTo('index.html')} className="flex items-center gap-4 cursor-pointer group">
                                 <div className="relative w-12 h-12 flex items-center justify-center">
-                                    <div className="absolute inset-0 bg-blue-600 rounded-2xl"></div>
-                                    <Icon name="pie-chart" className="text-white w-6 h-6 z-10" />
+                                    <img 
+                                        src="images/Club_Logo.png" 
+                                        alt="JnU Stat Club Logo"
+                                        onError={(e) => { e.target.style.display = 'none'; }}
+                                        className="w-full h-full object-contain relative z-10"
+                                    />
+                                    <div className="absolute inset-0 bg-blue-600 rounded-2xl group-hover:rotate-[15deg] transition-transform duration-300"></div>
+                                    <Icon name="pie-chart" className="absolute text-white w-6 h-6 z-10 opacity-0 group-hover:opacity-100 transition-opacity" />
                                 </div>
                                 <div className="flex flex-col text-left">
                                     <span className="text-xl font-black leading-none tracking-tighter text-slate-900">
@@ -175,4 +181,5 @@
     </script>
 </body>
 </html>
+
 
