--- a/events.html
+++ b/events.html
@@ -12,9 +12,6 @@
     <style>
         @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
         .animate-in { animation: fadeIn 0.6s ease-out forwards; }
-        ::-webkit-scrollbar { width: 8px; }
-        ::-webkit-scrollbar-track { background: #f1f1f1; }
-        ::-webkit-scrollbar-thumb { background: #cbd5e1; border-radius: 10px; }
     </style>
 </head>
 <body class="bg-white">
@@ -46,20 +43,13 @@
             ];
 
             return (
-                <div className="min-h-screen selection:bg-blue-600 selection:text-white">
-                    {/* Navigation Bar */}
-                    <nav className={`fixed w-full z-50 transition-all duration-500 ${scrolled ? 'bg-white/95 backdrop-blur-xl shadow-lg py-3' : 'bg-transparent py-8'}`}>
+                <div className="min-h-screen">
+                    <nav className="fixed w-full z-50 bg-white/95 backdrop-blur-xl shadow-lg py-3">
                         <div className="max-w-7xl mx-auto px-6 flex justify-between items-center">
-                            <div onClick={() => navigateTo('index.html')} className="flex items-center gap-4 cursor-pointer group">
+                            <div onClick={() => window.location.href='index.html'} className="flex items-center gap-4 cursor-pointer group">
                                 <div className="relative w-12 h-12 flex items-center justify-center">
-                                    <img 
-                                        src="images/Club_Logo.png" 
-                                        alt="JnU Stat Club Logo"
-                                        onError={(e) => { e.target.style.display = 'none'; }}
-                                        className="w-full h-full object-contain relative z-10"
-                                    />
-                                    <div className="absolute inset-0 bg-blue-600 rounded-2xl group-hover:rotate-[15deg] transition-transform duration-300"></div>
-                                    <Icon name="pie-chart" className="absolute text-white w-6 h-6 z-10 opacity-0 group-hover:opacity-100 transition-opacity" />
+                                    <div className="absolute inset-0 bg-blue-600 rounded-2xl"></div>
+                                    <Icon name="pie-chart" className="text-white w-6 h-6 z-10" />
                                 </div>
                                 <div className="flex flex-col text-left">
                                     <span className="text-xl font-black leading-none tracking-tighter text-slate-900">Statistics Club <span className="text-blue-500">JnU</span></span>
@@ -78,47 +68,18 @@
                                         className={`text-xs font-black uppercase tracking-widest transition-all px-4 py-2 rounded-xl flex items-center gap-2 ${isMoreDropdownOpen ? 'bg-slate-900 text-white' : 'text-slate-500 hover:bg-slate-50'}`}>
                                         More <Icon name="chevron-down" className={`w-3 h-3 transition-transform ${isMoreDropdownOpen ? 'rotate-180' : ''}`} />
                                     </button>
-                                    {isMoreDropdownOpen && (
-                                        <div className="absolute top-full right-0 mt-4 w-72 bg-white rounded-[2rem] shadow-2xl border border-slate-100 py-4 overflow-hidden animate-in">
-                                            <button onClick={() => window.location.href='verification.html'} className="w-full text-left px-6 py-4 flex items-center gap-4 hover:bg-slate-50 transition-colors group text-slate-600">
-                                                <div className="p-3 rounded-xl bg-slate-100 group-hover:bg-blue-600 group-hover:text-white transition-colors"><Icon name="shield-check" className="w-4 h-4" /></div>
-                                                <div className="flex flex-col">
-                                                    <span className="text-sm font-black uppercase tracking-tight">Verification</span>
-                                                    <span className="text-[10px] text-slate-400 font-bold uppercase tracking-widest">Certificate Auth</span>
-                                                </div>
-                                            </button>
-                                        </div>
-                                    )}
                                 </div>
                             </div>
                             <button className="md:hidden p-3 bg-blue-600 text-white rounded-2xl" onClick={() => setIsMenuOpen(!isMenuOpen)}>
                                 <Icon name={isMenuOpen ? "x" : "menu"} className="w-6 h-6" />
                             </button>
                         </div>
-
-                        {/* Mobile Navigation */}
-                        {isMenuOpen && (
-                            <div className="fixed inset-0 top-[88px] bg-white z-40 p-6 flex flex-col gap-3 animate-in md:hidden">
-                                {navLinks.map(link => (
-                                    <button 
-                                        key={link.id} 
-                                        onClick={() => window.location.href=link.id} 
-                                        className={`text-left font-black p-5 rounded-2xl flex items-center gap-4 text-lg uppercase tracking-tight ${link.active ? 'bg-blue-600 text-white shadow-xl shadow-blue-200' : 'bg-slate-50 text-slate-600'}`}
-                                    >
-                                        <Icon name={link.icon} className="w-6 h-6" /> {link.label}
-                                    </button>
-                                ))}
-                                <button onClick={() => window.location.href='verification.html'} className="text-left font-black p-5 rounded-2xl flex items-center gap-4 text-lg uppercase tracking-tight bg-slate-50 text-slate-600">
-                                    <Icon name="shield-check" className="w-6 h-6" /> Verification
-                                </button>
-                            </div>
-                        )}
                     </nav>
 
                     <main className="pt-40 pb-20 max-w-5xl mx-auto px-6 animate-in">
                         <div className="text-center mb-16">
-                            <h2 className="text-5xl font-black text-slate-900 tracking-tight text-center">Events Calendar</h2>
-                            <p className="text-slate-500 font-bold uppercase tracking-widest text-xs mt-4 text-center">Stay updated with our initiatives</p>
+                            <h2 className="text-5xl font-black text-slate-900 tracking-tight">Events Calendar</h2>
+                            <p className="text-slate-500 font-bold uppercase tracking-widest text-xs mt-4">Stay updated with our initiatives</p>
                         </div>
                         <div className="grid gap-8">
                             {events.map((ev, i) => (
@@ -134,8 +95,8 @@
                                         </div>
                                         <p className="text-slate-500 font-light leading-relaxed mb-6">{ev.desc}</p>
                                         <div className="flex items-center gap-4 text-xs font-bold text-slate-400 uppercase tracking-widest">
-                                            <span className="flex items-center gap-2 text-left"><Icon name="clock" className="w-3 h-3" /> {ev.date}</span>
-                                            <span className="flex items-center gap-2 text-left"><Icon name="map-pin" className="w-3 h-3" /> Dept. Auditorium</span>
+                                            <span className="flex items-center gap-2"><Icon name="clock" className="w-3 h-3" /> {ev.date}</span>
+                                            <span className="flex items-center gap-2"><Icon name="map-pin" className="w-3 h-3" /> Dept. Auditorium</span>
                                         </div>
                                     </div>
                                 </div>
